# Correlation-of-Steganography

./: .clang-format  CMakeLists.txt  LICENSE  Makefile  README.md
include/: matrix_analysis.hpp  menu.hpp  steganography.hpp
src/: main.cpp  matrix_analysis.cpp  menu.cpp  steganography.cpp
